fixed the problem with the sticky navbar showing behind some div elements

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ nav.sticky {
     background: #fff;
     padding: 5px 0px 20px 5px;
     transition: 0.6s;
+    z-index: 100;
 }
 
 nav.sticky > .nav-logo {
